--- a/p/esmulti_6d78cb6df88509c20a88bd325a352690f1ce48e7/index.html
+++ b/p/esmulti_6d78cb6df88509c20a88bd325a352690f1ce48e7/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Mulher trans é morta pela Guarda Municipal após esfaquear rival no Centro de Vitória</title>
-  <meta name="description" content="Natasha Lucas do Nascimento, de 27 anos, foi baleada pela Guarda Municipal após atacar outra mulher na Praça Costa Pereira, em Vitória."/>
+  <meta name="description" content="Natasha Lucas do Nascimento, de 27 anos, foi baleada por um agente da Guarda Municipal após atacar outra mulher na Praça Costa Pereira, Centro de Vitória."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_6d78cb6df88509c20a88bd325a352690f1ce48e7/"/>
   <meta property="og:title" content="Mulher trans é morta pela Guarda Municipal após esfaquear rival no Centro de Vitória"/>
-  <meta property="og:description" content="Natasha Lucas do Nascimento, de 27 anos, foi baleada pela Guarda Municipal após atacar outra mulher na Praça Costa Pereira, em Vitória."/>
+  <meta property="og:description" content="Natasha Lucas do Nascimento, de 27 anos, foi baleada por um agente da Guarda Municipal após atacar outra mulher na Praça Costa Pereira, Centro de Vitória."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fthemes%2Flayout_2019%2Fres%2Fimg%2Flogo.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fthemes%2Flayout_2019%2Fres%2Fimg%2Flogo.png"/>
@@ -25,13 +25,13 @@
     <figure style="margin:0 0 14px 0;">
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fthemes%2Flayout_2019%2Fres%2Fimg%2Flogo.png" alt="Mulher trans é morta pela Guarda Municipal após esfaquear rival no Centro de Vitória" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Natasha Lucas do Nascimento, de 27 anos, foi baleada pela Guarda Municipal após atacar outra mulher na Praça Costa Pereira, em Vitória.</p>
-<p>No final da noite de domingo (15), durante o carnaval no Centro de Vitória, uma confusão resultou na morte de Natasha Lucas do Nascimento, mulher trans de 27 anos, baleada por um agente da Guarda Municipal na Praça Costa Pereira.</p>
-<p>Natasha estava armada com uma faca e atacou outra mulher na frente dos agentes, ferindo-a no braço. A vítima correu para uma viatura da Guarda Municipal em busca de socorro e proteção.</p>
-<p>Mesmo após ordens verbais para parar, Natasha avançou contra a vítima e os agentes. Um guarda municipal efetuou um disparo para conter a agressão, atingindo Natasha.</p>
-<p>Natasha foi socorrida e levada ao Hospital Estadual de Urgência e Emergência (Heue), mas não resistiu aos ferimentos e morreu.</p>
-<p>A Guarda Municipal de Vitória informou que a equipe agiu em defesa da vida da vítima, utilizando força necessária após as ordens verbais serem ignoradas, seguindo os princípios da legalidade e necessidade.</p>
-<p>A ocorrência foi encaminhada à Delegacia Regional de Vitória. Duas mulheres que estavam com Natasha prestaram esclarecimentos. O corpo foi levado ao Departamento Médico Legal para necropsia.</p>
+    <p class="lead">Natasha Lucas do Nascimento, de 27 anos, foi baleada por um agente da Guarda Municipal após atacar outra mulher na Praça Costa Pereira, Centro de Vitória.</p>
+<p>O incidente ocorreu no final da noite de domingo (15), durante o carnaval no Centro de Vitória. Natasha Lucas do Nascimento teria ignorado ordens de parada e atacado outra mulher com uma faca na frente dos agentes da Guarda Municipal.</p>
+<p>Testemunhas informaram que a briga foi motivada por um desentendimento antigo entre as duas mulheres. A vítima do ataque correu em direção a uma viatura da Guarda Municipal para pedir socorro e se proteger atrás dos agentes.</p>
+<p>Mesmo após as ordens para parar, Natasha avançou contra a vítima e a feriu no braço. Um agente da Guarda Municipal disparou contra Natasha para conter a agressão.</p>
+<p>Natasha foi socorrida e levada para o Hospital Estadual de Urgência e Emergência (Heue), mas não resistiu aos ferimentos e morreu.</p>
+<p>A Guarda Municipal de Vitória declarou que a equipe agiu em defesa da vida da vítima, utilizando força necessária após as ordens verbais serem ignoradas. A Polícia Civil encaminhou o caso para a Delegacia Regional de Vitória.</p>
+<p>Duas mulheres que estavam com Natasha foram levadas para prestar esclarecimentos. O corpo de Natasha foi encaminhado ao Departamento Médico Legal (DML) para necropsia.</p>
   </div>
 </body>
 </html>
