--- a/p/esmulti_afd78f7c52926979222e2f17e7b9207819bf77e1/index.html
+++ b/p/esmulti_afd78f7c52926979222e2f17e7b9207819bf77e1/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Mulher trans é morta a tiros após confusão em Vitória</title>
-  <meta name="description" content="Uma mulher trans foi morta a tiros na Praça Costa Pereira, no Centro de Vitória, após uma briga envolvendo facadas e intervenção da Guarda Municipal."/>
+  <title>Mulher trans é morta a tiros após confusão na Praça Costa Pereira, em Vitória</title>
+  <meta name="description" content="Uma mulher trans foi morta a tiros na noite de domingo na Praça Costa Pereira, no Centro de Vitória, após esfaquear outra mulher trans durante uma confusão."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_afd78f7c52926979222e2f17e7b9207819bf77e1/"/>
-  <meta property="og:title" content="Mulher trans é morta a tiros após confusão em Vitória"/>
-  <meta property="og:description" content="Uma mulher trans foi morta a tiros na Praça Costa Pereira, no Centro de Vitória, após uma briga envolvendo facadas e intervenção da Guarda Municipal."/>
+  <meta property="og:title" content="Mulher trans é morta a tiros após confusão na Praça Costa Pereira, em Vitória"/>
+  <meta property="og:description" content="Uma mulher trans foi morta a tiros na noite de domingo na Praça Costa Pereira, no Centro de Vitória, após esfaquear outra mulher trans durante uma confusão."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fmorte-mulher-trans-centro.jpg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fmorte-mulher-trans-centro.jpg"/>
@@ -21,17 +21,17 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Mulher trans é morta a tiros após confusão em Vitória</h1>
+    <h1>Mulher trans é morta a tiros após confusão na Praça Costa Pereira, em Vitória</h1>
     <figure style="margin:0 0 14px 0;">
-      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fmorte-mulher-trans-centro.jpg" alt="Mulher trans é morta a tiros após confusão em Vitória" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
+      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fmorte-mulher-trans-centro.jpg" alt="Mulher trans é morta a tiros após confusão na Praça Costa Pereira, em Vitória" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Uma mulher trans foi morta a tiros na Praça Costa Pereira, no Centro de Vitória, após uma briga envolvendo facadas e intervenção da Guarda Municipal.</p>
-<p>O caso ocorreu por volta das 22h deste domingo (15), após a passagem dos blocos de Carnaval na região central de Vitória.</p>
-<p>A mulher, que estava armada com uma faca, teria esfaqueado outra mulher trans, sua desafeta, que tentou se proteger se abrigando atrás de agentes da Guarda Municipal presentes no local.</p>
-<p>Mesmo com a presença dos guardas e ordens para cessar as agressões, a suspeita continuou avançando em direção aos agentes, que precisaram disparar para se defender e proteger a vítima.</p>
-<p>A mulher atingida pelos tiros caiu ferida e foi levada ao Hospital de Urgência e Emergência de Vitória, onde morreu ao dar entrada.</p>
-<p>As duas mulheres, de 23 e 28 anos, foram autuadas em flagrante por tentativa de homicídio qualificada, enquanto o guarda municipal foi ouvido e liberado por legítima defesa de terceiro.</p>
-<p>O corpo da vítima foi encaminhado ao Instituto Médico-Legal para necropsia e posterior liberação aos familiares.</p>
+    <p class="lead">Uma mulher trans foi morta a tiros na noite de domingo na Praça Costa Pereira, no Centro de Vitória, após esfaquear outra mulher trans durante uma confusão.</p>
+<p>O caso ocorreu por volta das 22h, logo após a passagem dos blocos de Carnaval. A mulher morta estava armada com uma faca e teria esfaqueado outra mulher trans, que era sua desafeta.</p>
+<p>A vítima tentou se proteger atrás de agentes da Guarda Municipal presentes no local, mas a agressora continuou tentando atingi-la. Os guardas ordenaram diversas vezes que ela parasse e alertaram que poderiam atirar caso não obedecesse.</p>
+<p>Mesmo assim, a mulher avançou contra os agentes, que reagiram com um disparo para se defender e proteger a vítima. A mulher atingida correu alguns metros e caiu ferida no chão.</p>
+<p>Ela foi levada ao Hospital de Urgência e Emergência de Vitória, onde morreu ao dar entrada. A suspeita e a vítima tinham uma rixa antiga, que pode ter motivado a briga.</p>
+<p>A mulher que foi esfaqueada recebeu atendimento e prestou depoimento na delegacia. Ambas, de 23 e 28 anos, foram autuadas em flagrante por tentativa de homicídio qualificada por motivo fútil e impossibilidade de defesa da vítima, sendo a de 28 anos considerada partícipe.</p>
+<p>O guarda municipal que efetuou o disparo foi ouvido e liberado, pois ficou comprovada a legítima defesa de terceiro. O corpo da vítima foi encaminhado ao Instituto Médico-Legal para necropsia e posterior liberação aos familiares.</p>
   </div>
 </body>
 </html>
