--- a/p/esmulti_16dcbf5e7277a7bada9a0a652cc16a7c45f71b7f/index.html
+++ b/p/esmulti_16dcbf5e7277a7bada9a0a652cc16a7c45f71b7f/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Praticante de wingsuit fica preso em copa de árvore e é resgatado pelo Notaer em Castelo</title>
-  <meta name="description" content="Um praticante de wingsuit foi resgatado após ficar preso na copa de uma árvore em Castelo, nesta sexta-feira."/>
+  <meta name="description" content="Um praticante de wingsuit sofreu um acidente em Castelo e foi resgatado pelo Notaer após ficar preso no topo de uma árvore."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_16dcbf5e7277a7bada9a0a652cc16a7c45f71b7f/"/>
   <meta property="og:title" content="Praticante de wingsuit fica preso em copa de árvore e é resgatado pelo Notaer em Castelo"/>
-  <meta property="og:description" content="Um praticante de wingsuit foi resgatado após ficar preso na copa de uma árvore em Castelo, nesta sexta-feira."/>
+  <meta property="og:description" content="Um praticante de wingsuit sofreu um acidente em Castelo e foi resgatado pelo Notaer após ficar preso no topo de uma árvore."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FEquipes-tentam-retirar-atleta-de-wingsuit-preso-em-paredao-em-Castelo.jpg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FEquipes-tentam-retirar-atleta-de-wingsuit-preso-em-paredao-em-Castelo.jpg"/>
@@ -25,12 +25,12 @@
     <figure style="margin:0 0 14px 0;">
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FEquipes-tentam-retirar-atleta-de-wingsuit-preso-em-paredao-em-Castelo.jpg" alt="Praticante de wingsuit fica preso em copa de árvore e é resgatado pelo Notaer em Castelo" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Um praticante de wingsuit foi resgatado após ficar preso na copa de uma árvore em Castelo, nesta sexta-feira.</p>
-<p>O acidente ocorreu por volta das 12h, quando o atleta sofreu uma falha no equipamento durante o salto e precisou acionar o paraquedas reserva, caindo sobre a copa das árvores em uma área de mata fechada e de difícil acesso.</p>
-<p>O Corpo de Bombeiros Militar do Espírito Santo atendeu inicialmente a ocorrência, mas devido à complexidade do terreno e à impossibilidade de acesso terrestre, solicitou o apoio do Núcleo de Operações e Transporte Aéreo (Notaer).</p>
-<p>Para retirar a vítima do topo das árvores, a equipe do Notaer utilizou um cesto suspenso por um cabo de 63 metros, técnica de salvamento aéreo de precisão que exigiu cuidado para evitar que o vento gerado pelo rotor da aeronave movimentasse a vegetação e colocasse em risco a segurança do resgatado e dos operadores.</p>
-<p>O resgate foi concluído com êxito, e a vítima foi avaliada ainda no local, apresentando apenas escoriações leves, sem ferimentos graves.</p>
-<p>A operação destacou a importância da integração rápida entre o Corpo de Bombeiros e a aviação de Estado em ocorrências com terreno difícil e tempo crítico.</p>
+    <p class="lead">Um praticante de wingsuit sofreu um acidente em Castelo e foi resgatado pelo Notaer após ficar preso no topo de uma árvore.</p>
+<p>O acidente ocorreu por volta das 12h desta sexta-feira, quando o atleta teve uma falha no equipamento durante o salto e precisou acionar o paraquedas reserva.</p>
+<p>O homem caiu sobre a copa das árvores em uma área de mata fechada e de difícil acesso, o que dificultou o resgate por via terrestre.</p>
+<p>O Corpo de Bombeiros Militar do Espírito Santo atendeu inicialmente a ocorrência e solicitou o apoio do Núcleo de Operações e Transporte Aéreo (Notaer) devido à complexidade do terreno.</p>
+<p>Para retirar a vítima, o Notaer utilizou um cesto suspenso por um cabo de 63 metros, realizando uma manobra aérea de precisão para evitar riscos causados pelo vento do rotor da aeronave.</p>
+<p>O resgate foi concluído com êxito e a vítima foi avaliada no local, apresentando apenas escoriações leves.</p>
   </div>
 </body>
 </html>
