--- a/p/esmulti_02b950049cc8ac289a49e3c454ed2e7af80de9ed/index.html
+++ b/p/esmulti_02b950049cc8ac289a49e3c454ed2e7af80de9ed/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Operação 'Placa Fantasma' desarticula esquema de adulteração de placas na Serra</title>
+  <title>Operação Placa Fantasma desarticula esquema de adulteração de placas na Serra</title>
   <meta name="description" content="Casal é preso em flagrante durante ação conjunta da Guarda Civil Municipal da Serra e Polícia Civil que cumpriu sete mandados de busca e apreensão."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_02b950049cc8ac289a49e3c454ed2e7af80de9ed/"/>
-  <meta property="og:title" content="Operação 'Placa Fantasma' desarticula esquema de adulteração de placas na Serra"/>
+  <meta property="og:title" content="Operação Placa Fantasma desarticula esquema de adulteração de placas na Serra"/>
   <meta property="og:description" content="Casal é preso em flagrante durante ação conjunta da Guarda Civil Municipal da Serra e Polícia Civil que cumpriu sete mandados de busca e apreensão."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Foperacao-placa-fantasma-serra.jpg"/>
   <meta name="twitter:card" content="summary_large_image"/>
@@ -21,17 +21,16 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Operação 'Placa Fantasma' desarticula esquema de adulteração de placas na Serra</h1>
+    <h1>Operação Placa Fantasma desarticula esquema de adulteração de placas na Serra</h1>
     <figure style="margin:0 0 14px 0;">
-      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Foperacao-placa-fantasma-serra.jpg" alt="Operação 'Placa Fantasma' desarticula esquema de adulteração de placas na Serra" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
+      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Foperacao-placa-fantasma-serra.jpg" alt="Operação Placa Fantasma desarticula esquema de adulteração de placas na Serra" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
     <p class="lead">Casal é preso em flagrante durante ação conjunta da Guarda Civil Municipal da Serra e Polícia Civil que cumpriu sete mandados de busca e apreensão.</p>
-<p>A operação 'Placa Fantasma' foi realizada pela Guarda Civil Municipal (GCM) da Serra em parceria com a Delegacia Especializada de Roubos e Furtos de Veículos (DRFV), com diligências nos bairros Residencial Vista do Mestre, Planície da Serra, Morada de Laranjeiras, Ourimar e Jardim Limoeiro.</p>
-<p>Sete mandados de busca e apreensão foram cumpridos na última semana, resultando na prisão em flagrante de um casal acusado de adulterar placas automotivas em uma empresa credenciada ao Detran|ES, localizada em Jardim Limoeiro.</p>
+<p>A operação Placa Fantasma foi realizada pela Guarda Civil Municipal da Serra em parceria com a Delegacia Especializada de Roubos e Furtos de Veículos, com diligências nos bairros Residencial Vista do Mestre, Planície da Serra, Morada de Laranjeiras, Ourimar e Jardim Limoeiro.</p>
+<p>Sete mandados de busca e apreensão foram cumpridos na última semana, resultando na prisão em flagrante de um casal acusado de adulterar placas automotivas em uma empresa credenciada ao Detran|ES localizada em Jardim Limoeiro.</p>
 <p>As investigações indicaram que o casal realizava as adulterações sem o conhecimento do proprietário do estabelecimento e ostentava uma vida de luxo nas redes sociais, apesar de declararem renda mensal de apenas R$ 1,5 mil.</p>
-<p>Esdras Vianna, supervisor da GCM da Serra, destacou que a operação evidencia a coordenação entre o município e o Estado, ressaltando que a Guarda da Serra atua como um braço estratégico que utiliza dados e tecnologia para combater crimes.</p>
-<p>A desarticulação do esquema representa um golpe direto na logística de outras práticas ilícitas, como roubos e furtos, contribuindo para ampliar a segurança da população.</p>
-<p>A vice-prefeita e secretária de Defesa Social, Gracimeri Gaviorno, afirmou que o sucesso da operação reflete o investimento municipal em monitoramento e qualificação técnica, ressaltando a importância do combate à adulteração veicular para manter a ordem e a tranquilidade das famílias serranas.</p>
+<p>O supervisor da GCM da Serra, Esdras Vianna, afirmou que a operação demonstra a capacidade técnica da Guarda da Serra, que atua como um braço estratégico utilizando dados e tecnologia para combater crimes.</p>
+<p>A vice-prefeita e secretária de Defesa Social, Gracimeri Gaviorno, ressaltou que a operação reflete o investimento municipal em monitoramento e qualificação técnica, destacando a importância do combate à adulteração veicular para evitar crimes mais graves.</p>
   </div>
 </body>
 </html>
